<resources>
    <string name="app_name">Aloogue</string>
    <string name="google_app_id">AIzaSyCDV7m403qPYc0Rups48lgs2sx-19JTa6Q</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="signupTab">CADASTRO</string>
    <string name="loginTab">LOGIN</string>
    <string name="welcome">Bem-vindo</string>
    <string name="name">Nome</string>
    <string name="username">Usuário</string>
    <string name="enter">Entrar</string>
    <string name="help">Ajuda</string>
    <string name="notAccounted">Não é cadastrado?</string>
    <string name="password">Senha</string>
    <string name="title_activity_signup">SignupAct</string>
    <string name="iAmAn">EU SOU UM(A)</string>
    <string name="contractor">Contratante</string>
    <string name="professional">Profissional</string>
    <string name="signup">Cadastro</string>
    <string name="generalData">DADOS GERAIS</string>
    <string name="cpf">CPF</string>
    <string name="nameLabel">NOME</string>
    <string name="emailLabel">Email</string>
    <string name="regionLabel">REGIÃO</string>
    <string name="accountData">DADOS DA CONTA</string>
    <string name="passwordLabel">Senha</string>
    <string name="passwordConfirmLabel">CONFIRME A SENHA</string>
    <string name="professionLabel">PROFISSÃO</string>
    <string name="professionalLabel">DADOS PROFISSIONAIS</string>
    <string name="professionNameLabel">PROFISSÃO</string>
    <string name="pictureLabel">Foto</string>
    <string name="select">SELECIONE</string>
    <string name="maxPictureSizeLabel">Tamanho da imagem: 250 x 250 (px)</string>
    <string name="selfDescriptionLabel">DESCRIÇÃO PROFISSIONAL</string>
    <string name="maxDescriptionLabel">máximo: 1000 caracteres</string>
    <string name="experienceLabel">EXPERIÊNCIA</string>
    <string name="years">anos</string>
    <string name="paymentBasisLabel">BASE DE PAGAMENTO</string>
    <string name="currency">R$</string>
    <string name="by">por</string>
    <string name="byLabel">por /</string>
    <string name="curriculumLabel">CURRÍCULO</string>
    <string name="sendLabel">ENVIAR</string>
    <string name="test">teste</string>
    <string name="testFileName">nome_do_arquivo.pdf</string>
    <string name="iAmDone">TERMINEI!</string>
    <string name="acceptTerms">Eu li e concordo com os termos de uso.</string>
    <string name="addressLabel">ENDEREÇO</string>
    <string name="streetLabel">RUA</string>
    <string name="streetNumberLabel">Nº</string>
    <string name="neighbourhoodLabel">BAIRRO</string>
    <string name="cityLabel">CIDADE</string>
    <string name="stateLabel">ESTADO</string>
    <string name="profileLabel">PERFIL</string>
    <string name="businessHoursLabel">Horário de funcionamento</string>
    <string name="openning">Abertura:</string>
    <string name="closing">Fechamento:</string>
    <string name="toHours">ÀS</string>
    <string name="hoursParentesis">(horas)</string>
    <string name="verifyConnection">Verifique sua conexão com a Internet.</string>
    <string name="invalidUser">Usuário inválido.</string>
    <string name="invalidCpfCnpj">Número inválido.</string>
    <string name="cpfCnpjLable">CPF/CNPJ</string>
    <string name="uploadingFile">Carregando arquivo…</string>
    <string name="emptyName">Por favor, insira um nome.</string>
    <string name="emptyStreet">Por favor, insira uma rua válida.</string>
    <string name="emptyStreetNumber">Por favor, insira um número de rua válido.</string>
    <string name="emptyStreetNeighbourhood">Por favor, insira um bairro válido.</string>
    <string name="minMaxPasswordText">No mínimo 6 e máximo 32 caracteres</string>
    <string name="emptyPassword">Por favor, insira uma senha.</string>
    <string name="wrongPasswordConfirm">Por favor, verifique se as senhas são idênticas.</string>
    <string name="emptyPasswordConfirm">Por favor, insira a senha novamente.</string>
    <string name="whatUHaveToRent">O que você tem pra alugar?</string>
    <string name="commonUser">Usuário comum</string>
    <string name="tenant">Locatário</string>
    <string name="acceptTermsError">Você precisa aceitar os termos de uso para prosseguir.</string>
    <string name="emptyCity">Por favor, insira uma cidade.</string>
    <string name="invalidEmail">Por favor, insira um email válido.</string>
    <string name="welcomeUser">Seja bem vindo. (:</string>
    <string name="welcomeCustomized">Seja bem vindo,</string>
    <string name="find">Encontrar</string>
    <string name="insertAPlace">Digite um local</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search">Buscar</string>
    <string name="youAreHere">Você está aqui</string>
    <string name="search">Buscar</string>
    <string name="findAProduct">Digite um produto</string>
    <string name="title_activity_place_profile">Perfil da Loja</string>
    <string name="call">CHAMAR</string>
    <string name="useAsLabel">USAR ALOOGUE COMO</string>
    <string name="zipCodeLabel">CEP</string>
    <string name="emptyZipCode">Por favor, insira um CEP.</string>
    <string name="title_activity_dashboard_nav">DashboardNavAct</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="addShop">Adicionar loja</string>
    <string name="locationLabel">Localização</string>
    <string name="profile">Perfil</string>
    <string name="changeData">Alterar meus dados</string>
    <string name="getOut">Sair</string>
    <string name="action_menu">Menu</string>
    <string name="phoneLabel">TELEFONE</string>
    <string name="placeLabel">LOJA</string>
    <string name="createPlace">CRIAR LOJA</string>
    <string name="emptyPhone">Por favor, insira um telefone para contato.</string>
    <string name="addAProduct">Adicione um produto...</string>
    <string name="yourProducts">SEUS PRODUTOS</string>
    <string name="products">Produtos</string>
    <string name="productsTab">PRODUTOS</string>
    <string name="emptyProductName">Por favor, insira um nome ao produto para adicioná-lo.</string>
    <string name="place">Loja</string>
    <string name="manageProducts">Gerenciar produtos</string>
    <string name="areYouSureDelete">Tem certeza que deseja deletar esse item?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="okButton">OK</string>
    <string name="cancelButton">CANCELAR</string>
    <string name="editProduct">Editar Produto</string>
    <string name="infoTab">INFO</string>
    <string name="editProfile">Editar Perfil</string>
    <string name="savePlace">SALVAR LOJA</string>
    <string name="editShop">Editar Loja</string>
    <string name="title_activity_maps">Map</string>
    <string name="raioBusca">RAIO DE BUSCA (m)</string>
    <string name="title_activity_product_form">ProductFormActivity</string>
    <string name="edit">Editar</string>
    <string name="save">Salvar</string>
    <string name="productFormTitle">Produto</string>
    <string name="productsTitle">Produtos</string>
    <string name="saveProduct">Salvando produto</string>
    <string name="saveProductError">Erro ao salvar produto</string>
    <string name="loadProductError">Erro ao carregar produtos,..</string>
    <string name="placeId">placeId</string>
    <string name="delete_action">Excluir</string>
    <string name="cancel_action">Cancelar</string>
    <string name="placeViewerFormTitle">Informações</string>
    <string name="placeViewerProductsTitle">Produtos</string>
    <string name="createAccount">Crie uma conta</string>
    <string name="closeApplicationMessenge">Precisamos da sua localização :)</string>
    <string name="negative_msg">Sair da Aplicação</string>
    <string name="positive_msg">Permitir</string>
    <string name="ok">ok</string>
    <string name="enableLocationProviders">Ative os serviços de localização :(</string>
    <string name="locationSettings">Ativar</string>
    <string name="place_address_hint">Endereço</string>
    <string name="place_name_hint">Nome</string>
    <string name="place_register_code">CPF/CNPJ</string>
    <string name="place_phone_hint">Telefone</string>
    <string name="place_start_hour">Hora Inicial</string>
    <string name="place_finish_hour">Hora Final</string>
    <string name="aloogue">Alugar</string>
    <string name="place_menu">Loja</string>
    <string name="profile_menu">Perfil</string>
    <string name="product_list">Produtos</string>
    <string name="signing_up">Cadastrar</string>
    <string name="logout">Sair</string>
    <string name="savingPlace">Salvando Loja...</string>
    <string name="title_activity_teste">TesteActivity</string>
    <string name="deniedlogintitle">Login inválido</string>
    <string name="errorLoginTitle">Erro ao efetuar login</string>
    <string name="errorLoginMsg">Verifique sua conexão com a internet!</string>
    <string name="noConnected">Sem conexão</string>
    <string name="notConnectedMsg">Verifique sua conexão com a internet</string>
    <string name="emailconflict">Email cadastrado</string>
    <string name="emailconflictmsg">Já existe uma conta para o email informado</string>
    <string name="noEmpty">Campo obrigatório</string>
    <string name="openProductListTitle">Mostrar produtos</string>
    <string name="openProductListMsg">Deseja abrir a lista de produtos?</string>
    <string name="placeImage">Logo da empresa</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyDpZYklW5WzaQNh7AUWZ4To2rJi-WdHUf4
    </string>
</resources>
