<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:padding="25dp">
    <ImageView
            android:layout_marginTop="30dp"
            android:id="@+id/aloogue_image"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:src="@drawable/logo_normal"
            android:layout_alignParentTop="true"/>

    <EditText
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:layout_below="@+id/aloogue_image"
            android:id="@+id/userNameLogin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/emailLabel"
            android:layout_marginTop="40dp"
            android:inputType="textEmailAddress"/>


    <EditText
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:id="@+id/passwordLogin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/passwordLabel"
            android:layout_marginTop="40dp"
            android:inputType="textPassword"
            android:layout_below="@+id/userNameLogin"/>


    <Button
            android:id="@+id/enterButton"
            android:elevation="4dp"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_below="@+id/passwordLogin"/>

    <LinearLayout
            android:layout_below="@+id/enterButton"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content">

        <TextView
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notAccounted"
                android:textColorHint="@color/colorSecondaryText"
                android:textColor="@color/colorPrimary"/>

        <TextView
                android:clickable="true"
                android:textSize="16sp"
                android:layout_marginStart="5dp"
                android:id="@+id/signUp"
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/createAccount"/>
    </LinearLayout>
</RelativeLayout>