<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include layout="@layout/reduced_toolbar"/>

    <LinearLayout
            android:padding="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <EditText
                android:textColorHint="@color/colorAccent"
                android:textColor="@color/colorAccent"
                android:id="@+id/userNameSignUp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/name"
                android:layout_marginTop="40dp"
                android:inputType="text"/>

        <EditText
                android:textColorHint="@color/colorAccent"
                android:textColor="@color/colorAccent"
                android:id="@+id/userMailSignUp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/emailLabel"
                android:layout_marginTop="40dp"
                android:inputType="textEmailAddress"/>


        <EditText
                android:textColorHint="@color/colorAccent"
                android:textColor="@color/colorAccent"
                android:id="@+id/userPassSignUp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/password"
                android:layout_marginTop="40dp"
                android:inputType="textPassword"/>

        <Button
                android:id="@+id/signEnterButton"
                android:elevation="4dp"
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"/>
    </LinearLayout>


</LinearLayout>