<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".MainAct">

    <ImageView
            android:layout_width="140dp"
            android:layout_height="70dp"
            android:layout_gravity="top"
            android:src="@drawable/logo_normal"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

    <RelativeLayout
            android:id="@+id/loginArea"
            android:layout_width="320dp"
            android:layout_height="400dp"
            android:background="@drawable/border_frame"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:elevation="2dp">
        <EditText
                android:id="@+id/userNameLogin"
                style="@style/editTextLight"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/emailLabel"
                android:layout_marginTop="30dp"
                android:inputType="textEmailAddress"/>


        <EditText
                android:id="@+id/passwordLogin"
                style="@style/editTextLight"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/passwordLabel"
                android:layout_marginTop="10dp"
                android:inputType="textPassword"
                android:layout_below="@+id/userNameLogin"/>


        <Button
                android:id="@+id/enterButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter"
                android:background="@drawable/raised_button"
                android:layout_below="@+id/passwordLogin"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="28dp"/>

        <Button
                android:id="@+id/signUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/createaccount"
                android:textColorHint="@color/colorSecondaryText"
                android:textColor="@color/colorPrimary"
                android:background="@android:color/transparent"
                android:layout_below="@+id/enterButton"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</RelativeLayout>
